--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier ./app ./package.json ./tailwind.config.ts --write"
+    "format": "prettier ./app ./package.json ./lib ./tailwind.config.ts --write"
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
+    "@reduxjs/toolkit": "^2.2.6",
     "framer-motion": "^11.2.13",
     "local-storage": "^2.0.0",
+    "lodash": "^4.17.21",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-promise-tracker": "^2.1.1",
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
