feat - adding google login
refactor - adding toasts for dealing with toast and changing disgn of login and signup; adding function for saetting multiple values

chore - adding type for setting value and setting property for

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.6",
     "framer-motion": "^11.2.13",
     "local-storage": "^2.0.0",
