--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-promise-tracker": "^2.1.1",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
