--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.4",
     "react-promise-tracker": "^2.1.1",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
