--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "format": "prettier ./app ./package.json ./lib ./tailwind.config.ts --write"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/react": "^2.4.6",
     "@react-oauth/google": "^0.12.1",
     "@react-stately/data": "^3.11.6",
     "@reduxjs/toolkit": "^2.2.6",
+    "file-upload-with-preview": "^6.0.2",
     "framer-motion": "^11.2.13",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "local-storage": "^2.0.0",
