--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-oauth/google": "^0.12.1",
     "@react-stately/data": "^3.11.6",
     "@reduxjs/toolkit": "^2.2.6",
-    "file-upload-with-preview": "^6.0.2",
+    "@types/uuid": "^10.0.0",
+    "file-upload-with-preview": "^6.1.2",
     "framer-motion": "^11.2.13",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "local-storage": "^2.0.0",
@@ -29,6 +30,7 @@
     "react-promise-tracker": "^2.1.1",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
