--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "format": "prettier ./app ./package.json ./lib ./tailwind.config.ts --write"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/react": "^2.4.6",
     "@react-oauth/google": "^0.12.1",
     "@react-stately/data": "^3.11.6",
     "@reduxjs/toolkit": "^2.2.6",
+    "@types/uuid": "^10.0.0",
+    "file-upload-with-preview": "^6.1.2",
     "framer-motion": "^11.2.13",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "local-storage": "^2.0.0",
@@ -28,6 +30,7 @@
     "react-promise-tracker": "^2.1.1",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
