--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier ./app ./package.json ./lib ./tailwind.config.ts --write"
   },
   "dependencies": {
+    "@keyvaluesystems/react-stepper": "^1.0.4",
     "@nextui-org/react": "^2.4.6",
     "@react-oauth/google": "^0.12.1",
     "@react-stately/data": "^3.11.6",
